--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,5 @@ navigation:
   - title: Showcase
     url: "/showcase/"
 
-  - title: Buy Stickers
+  - title: Stickers
     url: "https://www.stickermule.com/marketplace/4071-juliaopt"
